[tool.poetry]
name = "cc-ds-challenge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gpytorch = "^1.5.1"
pandas = "^1.3.4"
holoviews = "^1.14.6"
jupyter = "^1.0.0"
pyro-ppl = "^1.7.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
